<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="gameResult"
            type="ru.ershovao.composition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/tv_emoji_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="48dp"
            app:resultEmoji="@{gameResult.winner}"
            android:contentDescription="@string/txt_game_over"
            android:src="@drawable/ic_smile"
            app:layout_constraintBottom_toTopOf="@id/tv_require_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_require_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
            tools:text="@string/msg_finish_count_of_right_answers" />

        <TextView
            android:id="@+id/tv_score_answers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:finishScore="@{gameResult.countOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
            app:layout_constraintEnd_toEndOf="@id/tv_require_answers"
            app:layout_constraintStart_toStartOf="@id/tv_require_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_require_answers"
            tools:text="@string/txt_finish_score" />

        <TextView
            android:id="@+id/tv_required_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
            app:layout_constraintEnd_toEndOf="@id/tv_require_answers"
            app:layout_constraintStart_toStartOf="@id/tv_require_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
            app:requiredPercentage="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            tools:text="@string/txt_finish_required_percentage" />

        <TextView
            android:id="@+id/tv_score_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:finishPercentage="@{gameResult}"
            app:layout_constraintBottom_toTopOf="@id/btn_try_again"
            app:layout_constraintEnd_toEndOf="@id/tv_require_answers"
            app:layout_constraintStart_toStartOf="@id/tv_require_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
            tools:text="@string/txt_finish_score_percentage" />

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/btn_try_again"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>